# bazel-jwt-vault-demo

./: .bazelteam  .env.example  .gitignore  .gitmessage  BUILD  Dockerfile  MODULE.bazel  README.md  bazel-auth-simple  docker-compose.standalone.yml  docker-compose.yml  docker-setup.sh  simple_test.sh  start-broker.sh  test-team-entities.sh  test-team-jwt.sh  vault.Dockerfile  vault_test.sh  verify_entity_sharing.sh
broker/: .env.example  BUILD  app.py  gen_keys.py  jwks.json  requirements.txt  signer_keys.json  start.py
client/: BUILD  build_sim.sh
docs/: ARCHITECTURE.md  COMMIT_STRATEGY.md  DEVELOPMENT.md  SETUP.md  TESTING.md
examples/: bazel_auth_example.py
hooks/: commit-msg
scripts/: generate-jwt-keys.sh  setup-conventional-commits.sh
tests/: run-tests.sh
tests/integration/: test-cli-tools.sh  test-full-workflow.sh  test-okta-auth.sh  test-team-isolation.sh  test-user-identity.sh
tests/scripts/: test-team-entities.sh  test-team-jwt.sh  test-team-token-isolation.sh  test-token-roles.sh  verify-team-entities.sh
tools/: BAZEL_AUTH_GUIDE.md  README.md  bazel-auth-simple
vault/: BUILD  setup.sh
