module(
    name = "bazel_jwt_vault_demo",
    version = "0.1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.11")
use_repo(python, "python_3_11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "broker_pip_deps",
    python_version = "3.11",
    requirements_lock = "//broker:requirements.lock",
)
use_repo(pip, "broker_pip_deps")
